fix edit fields colors for dark mode

--- a/ui/styles/app.less
+++ b/ui/styles/app.less
@@ -809,6 +809,15 @@ ul.sidebar {
         .modal-card-body {
             background: lighten(@darkBg, 5%);
             color: @darkFgDarker !important;
+
+            .field-label {
+                color: @darkFg;
+            }
+
+            input {
+                background-color: @darkBgDarker;
+                color: @darkFgDarker;
+            }
         }
 
         .modal-card-foot {
